# kars

./: .env.example  .gitignore  LICENSE  README.md
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/core/: api_types.rs  app.rs  input.rs  mod.rs  models.rs  search.rs  storage.rs
backend/src/infra/: anilist.rs  database.rs  mangadex.rs  mod.rs  openlibrary.rs  terminal.rs  tmdb.rs  web.rs
deploy/: kars.service
docs/: auth.md  production.md  server-setup.md
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: add-media-dialog.tsx  app-sidebar.tsx  data-table.tsx  explore-view.tsx  nav-main.tsx  nav-secondary.tsx  section-cards.tsx  site-header.tsx
frontend/lib/: types.ts  utils.ts
